# kyrylscript

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: pr-check.yml
cli/src/: main.rs
core/examples/: hello.ks
core/src/: kyryl_script.rs  lib.rs
core/src/compiler/: compiler.rs  constant.rs  function.rs  globals.rs  instruction.rs  mod.rs
core/src/global/: constants.rs  data_type.rs  ks_path.rs  mod.rs  path_type.rs
core/src/interpreter/: interpret_expression.rs  interpret_statement.rs  interpreter.rs
core/src/lexer/: lexer.rs  lexer_state.rs  token.rs
core/src/native_registry/: mod.rs  native_buffer.rs  native_function.rs  native_helper.rs  native_registry.rs  native_types.rs
core/src/parser/: context.rs  expression.rs  identifier_tail.rs  mod.rs  operator.rs  parameter.rs  parser.rs  semantic_analyzer.rs  statement.rs
core/src/tests/: compiler.rs  mod.rs  test_lexer.rs  test_parser.rs  test_semantics.rs
core/src/vm/: call_stack.rs  environment.rs  (+7 more)
examples/: bubble_sort.ks  comments.ks  function.ks  hello.ks  if_statement.ks  loops.ks  main.ks  modules.ks  print.ks  test.ks  triangle.ks  unit_converter.ks  variable_declaration.ks
global/src/: path_type.rs
ks_std/src/: ks_debug.rs  ks_len.rs  ks_local.rs  ks_print.rs  ks_range.rs  ks_ref.rs  lib.rs
native/: Cargo.toml
native/src/: native_function.rs
vm/: Cargo.toml
vm/src/: call_stack.rs  environment.rs  function.rs  lib.rs  tail_stack.rs  virtual_machine.rs
workspace/cli/: Cargo.toml
workspace/core/: Cargo.toml
workspace/global/: Cargo.toml
workspace/ks-cli/: Cargo.toml
workspace/ks-core/: Cargo.toml
workspace/ks-esp32/: Cargo.toml  run.sh
workspace/ks-global/: Cargo.toml
workspace/ks-mcu/: Cargo.toml
workspace/ks-native/: Cargo.toml
workspace/ks-programator/: Cargo.toml
workspace/ks-std/: Cargo.toml
workspace/ks-test/: Cargo.toml
workspace/ks-vm/: Cargo.toml
workspace/ks-vm-new/: Cargo.toml
workspace/ks_std/: Cargo.toml
(+207 files in other folders)
