[workspace]
members = [
    "workspace/core",
    "workspace/cli",
    "workspace/ks_std",
    "workspace/vm",
    "workspace/global",
    "workspace/native",
]

resolver = "2"
default-members = ["workspace/cli"]

[workspace.dependencies]
core = { path = "workspace/core" }
vm = { path = "workspace/vm" }

[workspace.package]
version = "0.5.0"
authors = ["Kyryl Lebedenko"]
