[workspace]
members = [
    "workspace/ks-core",
    "workspace/ks-cli",
    "workspace/ks-std",
    "workspace/ks-vm",
    "workspace/ks-global",
    "workspace/ks-programator",
    "workspace/ks-esp32",
    "workspace/ks-test"
]

resolver = "2"
default-members = ["workspace/ks-cli"]

[workspace.dependencies]
core = { path = "workspace/ks-core" }
vm = { path = "workspace/ks-vm" }

[workspace.package]
version = "0.5.0"
authors = ["Kyryl Lebedenko"]
